cabal-version: 3.0
name: zerepoch-ledger
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: rmourey_jr@blockchain-company.io
author: Michael Peyton Jones, Jann Mueller
synopsis: Wallet API
description:
    Zerepoch ledger library
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/The-Blockchain-Company/zerepoch

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable MultiParamTypeClasses FlexibleContexts
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Zerepoch Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
    import: lang
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Data.Time.Units.Extra
        Ledger
        Ledger.Address
        Ledger.AddressMap
        Ledger.Blockchain
        Ledger.Constraints
        Ledger.Constraints.OffChain
        Ledger.Constraints.OnChain
        Ledger.Constraints.TxConstraints
        Ledger.Contexts
        Ledger.Crypto
        Ledger.Fee
        Ledger.Generators
        Ledger.Oracle
        Ledger.Orphans
        Ledger.Index
        Ledger.Scripts
        Ledger.TimeSlot
        Ledger.Tokens
        Ledger.Tx
        Ledger.Typed.Scripts
        Ledger.Typed.Scripts.MonetaryPolicies
        Ledger.Typed.Scripts.StakeValidators
        Ledger.Typed.Scripts.Validators
        Ledger.Typed.Tx
        Ledger.Typed.TypeUtils
    reexported-modules:
        Data.Aeson.Extras,
        Data.Either.Extras,
        Data.Text.Prettyprint.Doc.Extras,
        Zerepoch.V1.Ledger.Bcc as Ledger.Bcc,
        Zerepoch.V1.Ledger.Bytes as Ledger.Bytes,
        Zerepoch.V1.Ledger.Credential as Ledger.Credential,
        Zerepoch.V1.Ledger.DCert as Ledger.DCert,
        Zerepoch.V1.Ledger.Interval as Ledger.Interval,
        Zerepoch.V1.Ledger.Slot as Ledger.Slot,
        Zerepoch.V1.Ledger.TxId as Ledger.TxId,
        Zerepoch.V1.Ledger.Time as Ledger.Time,
        Zerepoch.V1.Ledger.Value as Ledger.Value
        -- The rest of the zerepoch-ledger-api modules are reexported from within
        -- the Haskell modules and not in the current cabal file.
        -- For example: Zerepoch.V1.Ledger.Address is reexported by Ledger.Address

    build-depends:
        base >=4.9 && <5,
        aeson -any,
        base16-bytestring,
        bytestring -any,
        cborg -any,
        containers -any,
        cryptonite >=0.25,
        data-default -any,
        flat -any,
        hashable -any,
        hedgehog -any,
        zerepoch-core -any,
        zerepoch-ledger-api -any,
        memory -any,
        mtl -any,
        zerepoch-tx-plugin -any,
        prettyprinter -any,
        zerepoch-tx -any,
        serialise -any,
        scientific -any,
        template-haskell -any,
        text -any,
        time -any,
        time-units -any,
        transformers -any,
        recursion-schemes -any,
        lens -any,
        newtype-generics -any,
        http-api-data -any,
        bcc-api -any,
        bcc-api:gen -any,
        bcc-binary -any,
        bcc-crypto -any,
        bcc-crypto-class -any,
        deepseq -any,

    ghc-options: -fprint-potential-instances

    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt ZerepochTx.Plugin:defer-errors

test-suite zerepoch-ledger-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <5,
        containers -any,
        data-default -any,
        hedgehog -any,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
        transformers -any,
        zerepoch-ledger -any,
        zerepoch-tx -any,
        lens -any,
        bytestring -any,
        aeson -any,
        zerepoch-core -any,
        zerepoch-tx-plugin -any
